docs(docs.wire.com): WPB-15254 add ignore paths for unrelated files to build verification

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - main
+    paths-ignore:
+      - 'README.md'
+      - '.github/workflows/release.yaml'
 
 jobs:
   build:
