--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "wire-server"]
 	path = wire-server
-	url = https://github.com/wireapp/wire-server.git
+	url = https://github.com/mohitrajain/wire-server.git
+	branch = clean-wire-server-docs
