--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,7 +40,7 @@ jobs:
         run: |
           mkdir -p tmp_extracted
           tar -xzf ./wire-docs.tar.gz -C tmp_extracted
-          aws s3 sync tmp_extracted/latest s3://origin-docs.zinfradev.com/latest
-          aws s3 sync tmp_extracted/site s3://origin-docs.zinfradev.com/site
-          aws s3 cp tmp_extracted/versions.json s3://origin-docs.zinfradev.com/versions.json
+          aws s3 sync tmp_extracted/latest s3://origin-docs.wire.com/latest
+          aws s3 sync tmp_extracted/site s3://origin-docs.wire.com/site
+          aws s3 cp tmp_extracted/versions.json s3://origin-docs.wire.com/versions.json
           rm -rf tmp_extracted
