--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -39,7 +39,7 @@ jobs:
         run: |
           mkdir -p tmp_extracted
           tar -xzf ./wire-docs-${{ github.ref_name }}.tar.gz -C tmp_extracted
-          aws s3 sync tmp_extracted/ s3://origin-docs.zinfradev.com/
+          aws s3 sync tmp_extracted/ s3://origin-docs.wire.com/
           rm -rf tmp_extracted
 
       - name: Upload Release Asset
