--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,7 @@ on:
       - 'README.md'
       - 'Release.md'
       - '.github/workflows/release.yaml'
+      - '.github/workflows/build.yaml'
 
 jobs:
   test:
