--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,7 +41,14 @@ jobs:
         run: |
           mkdir -p tmp_extracted
           tar -xzf ./wire-docs.tar.gz -C tmp_extracted
+
+          aws s3 rm s3://${{ secrets.DEV_BUCKET }}/latest --recursive
           aws s3 sync tmp_extracted/latest s3://${{ secrets.DEV_BUCKET }}/latest
+
+
+          aws s3 rm s3://${{ secrets.DEV_BUCKET }}/site --recursive
           aws s3 sync tmp_extracted/site s3://${{ secrets.DEV_BUCKET }}/site
+
+
           aws s3 cp tmp_extracted/versions.json s3://${{ secrets.DEV_BUCKET }}/versions.json
           rm -rf tmp_extracted
