--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: CI Build
+name: Test Env Latest Build
 
 on:
   pull_request:
@@ -42,13 +42,11 @@ jobs:
           mkdir -p tmp_extracted
           tar -xzf ./wire-docs.tar.gz -C tmp_extracted
 
+          # removing old objects from the bucket to ensure, we don't keep objects at old path
           aws s3 rm s3://${{ secrets.DEV_BUCKET }}/latest --recursive
           aws s3 sync tmp_extracted/latest s3://${{ secrets.DEV_BUCKET }}/latest
 
-
           aws s3 rm s3://${{ secrets.DEV_BUCKET }}/site --recursive
-          aws s3 sync tmp_extracted/site s3://${{ secrets.DEV_BUCKET }}/site
-
 
           aws s3 cp tmp_extracted/versions.json s3://${{ secrets.DEV_BUCKET }}/versions.json
           rm -rf tmp_extracted
