--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ repo_url: https://github.com/wireapp/wire-docs
 edit_uri: edit/main/src/
 site_author: Wire Authors
 site_description: "Wire Documentation"
-use_directory_urls: true
+use_directory_urls: false
 nav:
   - Home: README.md
   - Installation:
@@ -48,7 +48,6 @@ nav:
       - Single Sign-On and User Provisioning: understand/single-sign-on/README.md
       - Audio/video calling, restund servers (TURN/STUN): understand/restund.md
       - Conference Calling 2.0 (aka SFT): understand/sft.md
-      - Federated Conference Calling: understand/sft#federated-conference-calling
       - Minio: understand/minio.md
       - Helm: understand/helm.md
       - Federation: understand/federation/README.md
@@ -98,7 +97,6 @@ nav:
         - Legal hold: developer/reference/team/legalhold.md
         - User Activation: developer/reference/user/activation.md
         - Connection: developer/reference/user/connection.md
-        - Connection backend internals: developer/reference/user/connection/#connection-backend-internals
         - User Registration: developer/reference/user/registration.md
         - User Rich info: developer/reference/user/rich-info.md
   - Security Responses:
