--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,8 +7,7 @@ on:
     paths-ignore:
       - 'README.md'
       - 'Release.md'
-      - '.github/workflows/release.yaml'
-      - '.github/workflows/test.yaml'
+      - '.github/**'
 
 jobs:
   build:
@@ -30,21 +29,3 @@ jobs:
             echo "Artifact not found!"
             exit 1
           fi
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
-          aws-region: eu-west-1
-
-      - name: Deploy latest docs to S3
-        run: |
-          mkdir -p tmp_extracted
-          tar -xzf ./wire-docs.tar.gz -C tmp_extracted
-
-          # removing old objects from the bucket to ensure, we don't keep objects at old path
-          aws s3 rm s3://${{ secrets.BUCKET }}/latest --recursive
-          aws s3 sync tmp_extracted/latest s3://${{ secrets.BUCKET }}/latest
-
-          aws s3 cp tmp_extracted/versions.json s3://${{ secrets.BUCKET }}/versions.json
-          rm -rf tmp_extracted
