WPB-17086: fix deploy.yaml to consider previous versions.json and update index.html for latest

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,7 +7,9 @@ on:
     paths-ignore:
       - 'README.md'
       - 'Release.md'
-##      - '.github/**'
+      - '.github/**'
+      - 'build/**'
+      - Makefile
 
 jobs:
   test:
