--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,8 +8,8 @@ on:
       - 'README.md'
       - 'Release.md'
       - '.github/**'
-      - 'build/**'
-      - Makefile
+#      - 'build/**'
+#      - Makefile
 
 jobs:
   build:
