--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,7 +83,7 @@ nav:
         - Servant: developer/developer/servant.md
         - Testing the wire-server Haskell code base: developer/developer/testing.md
         - Upgrading: developer/developer/upgrading.md
-      - Refernce:
+      - Reference:
         - Config Options: developer/reference/config-options.md
         - Creating and populating conversations: developer/reference/conversation.md
         - Maintaining ElasticSearch: developer/reference/elastic-search.md
