link quickstart and events docs and update mkdocs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,8 +100,8 @@ nav:
         - User Rich info: developer/reference/user/rich-info.md
   - Apps SDK:
       - Understanding Apps: integrations/README.md
-      - Creating An App: integrations/creating-an-app.md
-      - Permissions: integrations/permissions.md
+      - Quickstart: integrations/quickstart.md
+      - Events: integrations/events.md
   - Security Responses:
       - Overview: security-responses/README.md
       - "2023-01-19 - Security Advisory: HTML Injection in wire.com": security-responses/2023-01-19_html_injection.md
