chore: Add Integrations team as CODEOWNERS

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-*	@wireapp/backend @wireapp/platform-engineering @wireapp/customerops
+*	@wireapp/backend @wireapp/platform-engineering @wireapp/customerops @wireapp/integrations
