--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ nav:
       - Configuration Reference:
         - Overview: how-to/upgrade/05-config-reference.md
         - Wire Server 5.24: how-to/upgrade/config-references/wire-server-5.24.0.md
+        - Wire Server 5.25: how-to/upgrade/config-references/wire-server-5.25.0.md
   - Administration:
       - Overview: how-to/administrate/README.md
       - kubernetes: how-to/administrate/kubernetes/README.md
